# poc-marsa-planner

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  api.py  cli.py  ingest.py  main.py  pyproject.toml  requirements.txt  sample_data.py  simulation.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_simulations.py  0003_revoked_tokens.py
backend/app/: config.py  database.py  deps.py  errors.py  logging.py  main.py  middleware.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  clients.py  simulation.py  simulations.py
backend/app/sim/: __init__.py  advisor.py  engine.py  preprocessing.py  sample_data.py  service.py
backend/data/: abc_equity_fund.csv  calibration_2026-04.json  ebe_money_market_fund.csv  inflation.csv
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_invert.py  test_market_expectations.py  test_market_spec.py  test_simulation.py  test_simulations.py
demo/: README.md  capture.ts  music.mjs  package-lock.json  package.json  remotion.config.ts  render.mjs  sample-voice.mjs  tsconfig.json  tts.mjs
demo/src/: Marsa.tsx  Root.tsx  (+2 more)
docs/: analyst-report.md  data-sources.md  gap-and-gtm.md  market-spec.md  next.md  readiness.md  strategy.md  ux-audit-v2.md  ux-audit.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tests-e2e/: README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts
(+58 files in other folders)
